--- a/app/templates/dashboards/shop_dashboard.html
+++ b/app/templates/dashboards/shop_dashboard.html
@@ -699,7 +699,7 @@
 
 {% block scripts %}
 {{ super() }}
-<script src="{{ url_for('static', filename='js/dashboards/shop.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dashboards/shop.js') }}?v=2"></script>
 <script>
     // Horloge
     function updateClock() {
