--- a/app/templates/orders/view_order.html
+++ b/app/templates/orders/view_order.html
@@ -2,6 +2,8 @@
 {% block title %}{{ title }} - Fée Maison{% endblock %}
 {% block content %}
 
+{% include 'orders/_stock_warning_modal.html' %}
+
 <div class="container-fluid py-4">
     <div class="row justify-content-center">
         <div class="col-lg-10">
